Add link to github

--- a/html/popup.html
+++ b/html/popup.html
@@ -23,7 +23,9 @@
         <small class="version">
           <div>version v1.0</div>
           <div>compatibility chrome browser 55+</div>
-          <a href="#">ac event bucket github</a>
+          <a href="https://github.com/interaminense/ac-event-bucket"
+            >ac event bucket github</a
+          >
         </small>
       </div>
     </div>
