Update version to 1.0.1

--- a/src/html/popup.html
+++ b/src/html/popup.html
@@ -21,9 +21,11 @@
 
       <div class="footer">
         <small class="version">
-          <div>version v1.0</div>
+          <div>version v1.0.1</div>
           <div>compatibility chrome browser 55+</div>
-          <a href="https://github.com/interaminense/ac-event-bucket"
+          <a
+            href="https://github.com/interaminense/ac-event-bucket"
+            target="_blank"
             >ac event bucket github</a
           >
         </small>
